# shell-scripts-kit

./: .gitignore  LICENSE  Makefile  README.md
config/: .spaceshiprc.zsh  .zsh_aliases  .zshrc
scripts/: add_new_group_target.sh  add_new_service.sh  add_new_systemd_service.sh  delete_tag.sh  fix_zsh_history.sh  generate_changelogs.sh  generate_releases.sh  generate_venv.sh  push_new_tag.sh  python_setup.sh  remove_systemd_service.sh  running_ports.sh  running_services.sh  start_projects.sh  zsh_aliases.sh
templates/: .env.example  .gitignore  LICENSE  Makefile  README.md  pre-commit  systemd.service
templates/docker/: .dockerignore  Dockerfile
templates/python/: __init__.py  __main__.py  pyproject.toml
templates/python/tests/: __init__.py  conftest.py
templates/systemd/: base.service  docker-compose.service  docker-file.service  group.target  makefile.service  venv.service
utils/: functions.sh
