[tool.poetry]
name = "PROJECT_NAME"
version = "0.1.0"
description = "PROJECT_DESCRIPTION"
authors = ["mauprogramador <sir.silvabmauricio@gmail.com>"]
license = "MIT"
repository = "https://github.com/mauprogramador/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.3"
mypy = "^1.14.1"
dill = "^0.3.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
line-length = 79

[tool.mypy]
python_version = "3.11"
disable_error_code = ["assignment", "no-redef", "arg-type", "import-untyped"]

[tool.pylint]
disable = ["C0114", "C0115", "C0116", "C0123", "R0903", "R0913", "E1136", "E0611", "E1131", "R0801"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests/"]
filterwarnings = ["ignore::DeprecationWarning"]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
